--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -95,7 +95,8 @@ table.fixed td { overflow: hidden; }
         @if (isBusiness)
         {
 
-            <li role="presentation" class="active assignedcolor"><a href="#business" aria-controls="business" role="tab" data-toggle="tab">Summary (@Model.Count())</a></li>
+            <li role="presentation" class="active assignedcolor"><a href="#businessopen" aria-controls="businessopen" role="tab" data-toggle="tab">Open (@countopen)</a></li>
+            <li role="presentation" class="closecolor"><a href="#businessclosed" aria-controls="businessclosed" role="tab" data-toggle="tab">Closed (@countclosed)</a></li>
         }
         else
         {
@@ -150,12 +151,12 @@ table.fixed td { overflow: hidden; }
         @if (isBusiness)
         {
 
-            <div role="tabpanel" class="tab-pane active" id="business">
+            <div role="tabpanel" class="tab-pane active" id="businessopen">
 
                 <div class="gap"></div>
 
 
-                <table class="table table-striped" id="tablebusiness" style="width:100%">
+                <table class="table table-striped" id="tablebusinessopen" style="width:100%">
                     <thead>
                         <tr>
                             <th width="5%">Id</th>
@@ -169,6 +170,7 @@ table.fixed td { overflow: hidden; }
                             <th>
                                 Requested by
                             </th>
+                            <th>Status</th>
 
 
 
@@ -179,7 +181,7 @@ table.fixed td { overflow: hidden; }
                     <tbody>
 
                         @*@foreach (var item in Model.Where(x => (x.assigned_to == session.Current.UserId && x.owner != session.Current.UserId && x.status != 9 && x.status != 3 && x.status != 7) || x.owner == session.Current.UserId && (x.status == 7 || x.status == 3)).OrderBy(x=>x.priority))*@
-                        @foreach (var item in Model)
+                        @foreach (var item in Model.Where(x=>x.status !=9))
                         {
                             <tr>
                                 <td style="width:20px">
@@ -203,15 +205,78 @@ table.fixed td { overflow: hidden; }
 
                                 <td>@item.initiator</td>
 
-                                <td data-order="@(item.HasAttachment?1:0)">
-                                    <span class="fa fa-@(item.HasAttachment?"paperclip":"")"></span>
-                                </td>
+                                <td><small><label class="label label-@item.StatusDescLabel">@item.StatusDesc</label></small></td>
+                                
                             </tr>
                         }
                     </tbody>
                 </table>
 
             </div>
+
+
+    <div role="tabpanel" class="tab-pane" id="businessclosed">
+
+        <div class="gap"></div>
+
+
+        <table class="table table-striped" id="tablebusinessclosed" style="width:100%">
+            <thead>
+                <tr>
+                    <th width="5%">Id</th>
+                    <th></th>
+                    <th width="45%">Title</th>
+                    <th>Assigned</th>
+                    <th>Owner</th>
+                    <th width="10%">
+                        @Html.DisplayNameFor(model => model.priority)
+                    </th>
+                    <th>
+                        Requested by
+                    </th>
+                    <th>Status</th>
+
+
+
+
+                </tr>
+            </thead>
+
+            <tbody>
+
+                @*@foreach (var item in Model.Where(x => (x.assigned_to == session.Current.UserId && x.owner != session.Current.UserId && x.status != 9 && x.status != 3 && x.status != 7) || x.owner == session.Current.UserId && (x.status == 7 || x.status == 3)).OrderBy(x=>x.priority))*@
+                @foreach (var item in Model.Where(x=>x.status == 9))
+                {
+                    <tr>
+                        <td style="width:20px">
+                            <span class="text-muted fa-15x">@item.task_id</span>
+                        </td>
+                        <td style="width:20px">
+                            <span style="padding:7px 2px;" class="label label-@(item.StatusDescLabel)" data-toggle="tooltip" data-placement="left" title="@item.TypeDesc - @item.StatusDesc"><span style="font-size:1.5em" class="fa fa-fw fa-@(item.typeIcon)"></span></span>
+                        </td>
+                        <td class="">
+                            <div class="readmore">
+                                <a href="@Url.Action("EditTask", new { id = item.task_id })">@Html.DisplayFor(modelItem => item.title)</a> (@item.TypeDesc)
+                            </div>
+
+                        </td>
+                        <td>@item.user.firstname</td>
+                        <td>@item.user1.firstname</td>
+
+                        <td data-order="@item.priority">
+                            <span class="fa fa-circle color-@item.PriorityDesc.ToLower()"></span>&nbsp; <span class="text-muted">@Html.DisplayFor(modelItem => item.PriorityDesc)</span>
+                        </td>
+
+                        <td>@item.initiator</td>
+
+                        <td><small><label class="label label-@item.StatusDescLabel">@item.StatusDesc</label></small></td>
+
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+    </div>
         }
         else
         {
@@ -911,7 +976,12 @@ table.fixed td { overflow: hidden; }
             //$('td').highlight('MTP');
 
 
-            $('#tablebusiness').DataTable({
+            $('#tablebusinessopen').DataTable({
+                "pageLength": 50,
+                "order": [[0, "desc"]]
+            });
+
+            $('#tablebusinessclosed').DataTable({
                 "pageLength": 50,
                 "order": [[0, "desc"]]
             });
