separated informational from others

--- a/CatchMe/Views/Tasks/ShowInfo.cshtml
+++ b/CatchMe/Views/Tasks/ShowInfo.cshtml
@@ -144,7 +144,7 @@
 </section>
 
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Back to List", "InfoList")
     </div>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
