--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -113,11 +113,11 @@ table.fixed td { overflow: hidden; }
             }
             if (countopenbyme > 0)
             {
-                <li role="presentation" class="ownedcolor"><a href="#openbyme" aria-controls="openbyme" role="tab" data-toggle="tab">Owned By Me (@countopenbyme)</a></li>
+                @*<li role="presentation" class="ownedcolor"><a href="#openbyme" aria-controls="openbyme" role="tab" data-toggle="tab">Owned By Me (@countopenbyme)</a></li>*@
             }
             if (latest10.Count > 0)
             {
-                <li role="presentation" class="recentcolor"><a href="#recent" aria-controls="recent" role="tab" data-toggle="tab">Recent updates (@latest10.Count())</a></li>
+                @*<li role="presentation" class="recentcolor"><a href="#recent" aria-controls="recent" role="tab" data-toggle="tab">Recent updates (@latest10.Count())</a></li>*@
             }
 
             if (countsearched > 0)
@@ -126,13 +126,13 @@ table.fixed td { overflow: hidden; }
             }
             if (countnotifications > 0)
             {
-                <li role="presentation" class="notifiedcolor"><a href="#notified" aria-controls="notified" role="tab" data-toggle="tab"> <span class="fa fa-envelope"></span> Received (@countnotifications)</a></li>
+                @*<li role="presentation" class="notifiedcolor"><a href="#notified" aria-controls="notified" role="tab" data-toggle="tab"> <span class="fa fa-envelope"></span> Received (@countnotifications)</a></li>*@
 
             }
 
             if (countinfos > 0)
             {
-                <li role="presentation" class="infocolor"><a href="#info" aria-controls="info" role="tab" data-toggle="tab"> <span class="fa fa-info-circle"></span> informational (@countinfos)</a></li>
+                @*<li role="presentation" class="infocolor"><a href="#info" aria-controls="info" role="tab" data-toggle="tab"> <span class="fa fa-info-circle"></span> informational (@countinfos)</a></li>*@
 
             }
 
