--- a/CatchMe/Views/Shared/_Layout.cshtml
+++ b/CatchMe/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿
-@using session = CatchMe.Helpers.UserSession
+﻿@using session = CatchMe.Helpers.UserSession
 <!DOCTYPE html>
 <html>
 <head>
@@ -29,7 +28,13 @@
                     @if (!session.Current.IsBusiness)
                     {
                         <li><a href="@Url.Action("CreateTask","Tasks")" title="create task"><span class="fa fa-15x fa-plus"></span> </a></li>
-    <li><a href="@Url.Action("Index","Stats")" title="Stats"><span class="fa fa-15x fa-line-chart"></span> </a></li>
+                        <li><a href="@Url.Action("Index","Stats")" title="Stats"><span class="fa fa-15x fa-line-chart"></span> </a></li>
+
+                        if (session.Current.HasInformational) {
+                            <li><a href="@Url.Action("InfoList","Tasks")" title="Infos"><span class="fa fa-15x fa-info-circle"></span> </a></li>
+
+                        }
+
                     }
                     
                    
@@ -52,6 +57,8 @@
                         
                     </li>
 
+                    
+
                 </ul>                
                 <p class="nav navbar-text navbar-right">
                     
@@ -60,6 +67,8 @@
                     <a href="@Url.Action("Index","Admin")" title="Admin"><span class="fa fa-15x fa-wrench"></span></a>@:&nbsp;
                 
                 }
+
+
                     Hello, @session.Current.Firstname! 
 
                     @if (!String.IsNullOrWhiteSpace(session.Current.ImpersonatedUser))
@@ -72,6 +81,8 @@
         </div>
     </div>
     <div class="container body-content">
+        
+
         @RenderBody()
 
      
